# src/app/api/types.go
@@ -3,12 +3,29 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package api
 
+// ServerError defines model for ServerError.
+type ServerError struct {
+	Msg  string `json:"msg"`
+	Type string `json:"type"`
+}
+
 // User defines model for User.
 type User struct {
-	Email     *string `json:"email,omitempty"`
-	FirstName *string `json:"firstName,omitempty"`
-	LastName  *string `json:"lastName,omitempty"`
+	Email     string `json:"email" validate:"required,email"`
+	FirstName string `json:"firstName" validate:"required,alpha"`
+	LastName  string `json:"lastName" validate:"required,alpha"`
 }
 
 // Users defines model for Users.
 type Users = []User
+
+// UsersAdded defines model for UsersAdded.
+type UsersAdded struct {
+	NumAdded     int    `json:"numAdded"`
+	NumExisted   int    `json:"numExisted"`
+	NumRequested int    `json:"numRequested"`
+	Status       string `json:"status"`
+}
+
+// AddUsersJSONRequestBody defines body for AddUsers for application/json ContentType.
+type AddUsersJSONRequestBody = Users
