# src/app/controllers/users.go
@@ -2,20 +2,74 @@ package controllers
 
 import (
 	"context"
+	"log"
 	"mongo-test/api"
 	"net/http"
 
-	"github.com/gin-gonic/gin"
 	"go.mongodb.org/mongo-driver/bson"
+	"go.mongodb.org/mongo-driver/mongo"
+	"go.mongodb.org/mongo-driver/mongo/options"
 )
 
+const collectionName = "users"
+
+
 func (s Server) GetUsers(ctx context.Context, request api.GetUsersRequestObject) (api.GetUsersResponseObject, error) {
-	var result bson.M
-	err := s.DB.RunCommand(context.TODO(), bson.M{"dbStats": 1}).Decode(&result)
+	results := api.Users{}
+	filter := bson.M{}
+	coll := s.DB.Collection(collectionName)
+	cursor, err := coll.Find(context.TODO(), filter)
 	if err != nil {
-		panic(err)
+		log.Fatal(err)
 	}
-	// c.JSON(http.StatusOK, result)
-	// return api.GetUsers200JSONResponse(result), nil
-	return api.GetUsersResponseObject(api.GetUsersdefaultJSONResponse{Body: result, StatusCode: http.StatusOK}), nil
+	if err = cursor.All(context.TODO(), &results); err != nil {
+		log.Fatal(err)
+	}
+	return api.GetUsersResponseObject(api.GetUsersdefaultJSONResponse{Body: results, StatusCode: http.StatusOK}), nil
+}
+
+func (s Server) AddUsers(ctx context.Context, request api.AddUsersRequestObject) (api.AddUsersResponseObject, error) {
+	// Validate the request body
+	for _, user := range *request.Body {
+		err := ValidateInput(user)
+		if err != nil {
+			validationError := api.ServerError{
+				Type: "ValidationError",
+				Msg:  err.Error(),
+			}
+			return api.AddUsers400JSONResponse(validationError), nil
+		}
+	}
+
+	// Create a slice of WriteModels to perform in bulk
+	var writeModels []mongo.WriteModel
+	for _, user := range *request.Body {
+		model := mongo.NewUpdateOneModel()
+		model.SetFilter(bson.M{"email": user.Email})
+		model.SetUpdate(
+			bson.M{
+				"$set":         bson.M{"firstName": user.FirstName, "lastName": user.LastName},
+				"$setOnInsert": bson.M{"email": user.Email},
+			},
+		)
+		model.SetUpsert(true)
+		writeModels = append(writeModels, model)
+	}
+
+	// Perform the bulk write
+	coll := s.DB.Collection(collectionName)
+	opts := options.BulkWrite().SetOrdered(false)
+	bulkWrite, err := coll.BulkWrite(context.TODO(), writeModels, opts)
+	if err != nil {
+		return api.AddUsers500Response{}, err
+	}
+
+	// Return a success response
+	usersAdded := api.UsersAdded{
+		Status:       "success",
+		NumRequested: len(*request.Body),
+		NumAdded:     int(bulkWrite.UpsertedCount),
+		NumExisted:   int(bulkWrite.MatchedCount),
+	}
+	return api.AddUsers200JSONResponse(usersAdded), nil
 }
